Use padding on save dialog panels so scrollbar is correctly positioned
Previously was using a margin so the scrollbar floated 1.25em from the
edge of the dialog.

Remove Apex-specific hack.

--- a/modules/ve-mw/ui/styles/dialogs/ve.ui.MWSaveDialog.css
+++ b/modules/ve-mw/ui/styles/dialogs/ve.ui.MWSaveDialog.css
@@ -5,17 +5,8 @@
  * @license The MIT License (MIT); see LICENSE.txt
  */
 
-.ve-ui-mwSaveDialog-panel {
-	margin: 1.25em;
-}
-
 .ve-ui-mwSaveDialog-summaryLabel {
 	padding: 0.25em 0;
-}
-
-.ve-ui-mwSaveDialog-savePanel {
-	/* Make room for input box shadow */
-	padding: 0 0.5em;
 }
 
 .ve-ui-mwSaveDialog-summary {
